# clapp_backend

./: .dockerignore  .gitignore  README.md  conftest.py  db.sqlite3  dockercompose.yml  dockerfile  entrypoint.sh  improvements.md  manage.py  pyproject.toml  temp_db.sqlite3  test_db.sqlite3
.claude/: row-level-tenancy-plan.md
.github/workflows/: deploy.yml  tests.yml
applications/: admin.py  models.py  serializer.py  urls.py  views.py
applications/migrations/: 0001_initial.py  0004_remove_application_festival_application_content_type_and_more.py  0005_populate_content_type.py  0006_convert_text_nulls_to_empty.py  0007_alter_application_application_method_and_more.py  0009_remove_application_answer_date_and_more.py  0010_rename_application_status_application_status.py  0011_application_deleted_at.py  0012_add_application_year_value.py
applications/tests/: test_models.py  test_serializer.py  test_views.py
circus_agent_backend/: asgi.py  middleware.py  serializers.py  settings.py  urls.py  wsgi.py
clapp_backend/: asgi.py  celery.py  db_router.py  middleware.py  urls.py  utils.py  wsgi.py
conf/: settings_test.py
conf/settings/: base.py  local.py  prod.py  test.py  tests.py
data/: backup_db.sh  backups.md  db.sqlite3
data/backups/: db.sqlite3.backup  db_backup.sql  db_backup_20260102_140228.sqlite3  festivals_data.csv
docker/: .env.basic  docker-compose.yml  dockercompose.yml  dockerfile  entrypoint-celery.sh  nginx.conf
docs/: CLAUDE.md  schema_migration.md
festivals/: helpers.py  models.py  serializer.py  utils.py  views.py
festivals/migrations/: 0009_remove_festival_applied.py
organisations/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
organisations/festivals/: admin.py  apps.py  models.py  serializer.py  urls.py  utils.py  views.py
organisations/migrations/: 0001_convert_text_nulls_to_empty.py  0002_initial.py
organisations/residencies/: admin.py  apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
organisations/tests/: test_serializers.py  test_user_created_flag.py  test_utils.py  test_views.py  test_views_extended.py
organisations/venues/: admin.py  apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
performance/: models.py
performances/: models.py  serializers.py  urls.py  views.py
performances/migrations/: 0001_initial.py  0002_rename_performance_name_performance_performance_title_and_more.py  0004_alter_performance_genres.py  0005_alter_performance_genres.py  0006_alter_performance_genres.py  0007_performance_email_prompt_and_more.py  0008_convert_text_nulls_to_empty.py  0009_remove_performance_dossier_and_more.py  0010_alter_performance_length.py
performances/tests/: test_models.py  test_views.py  (+2 more)
profiles/: admin.py  emails.py  models.py  oauth_views.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
residencies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
scripts/: backup.py  excel_import.py
services/: gemini_service.py  mistral_service.py  rate_limit.py
support/: admin.py  models.py  serializers.py  urls.py  views.py
tests/: test_integration.py
venues/: admin.py  models.py  serializers.py  views.py
(+79 files in other folders)
