[project]
name = "cab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.3",
    "django==4.2.23",
    "django-cors-headers==4.7.0",
    "django-filter>=25.1",
    "django-multiselectfield>=1.0.1",
    "django-phonenumber-field[phonenumbers]>=8.2.0",
    "django-redis>=6.0.0",
    "djangorestframework==3.16.0",
    "drf-writable-nested>=0.7.2",
    "et-xmlfile==2.0.0",
    "eval-type-backport==0.2.2",
    "exceptiongroup==1.3.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.1",
    "google-api-python-client==2.179.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-genai==1.31.0",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.74.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "mistralai==1.9.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "psycopg2-binary>=2.9.11",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "redis>=7.1.0",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.3",
    "tenacity==9.1.2",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "django-extensions==4.1",
    "openpyxl==3.1.5",
    "pandas==2.3.0",
    "numpy==2.0.2",
    "tqdm==4.67.1",
    "beautifulsoup4==4.13.4",
    "soupsieve==2.7",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings.tests"
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--reuse-db",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-config=pyproject.toml",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "manage.py",
    "conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = [
    "^manage\\.py$",
    "migrations/",
    ".*/tests/.*",
    "test_.*\\.py$",
    "conftest\\.py$",
    "scripts/",
]

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "*.tests.*",
    "tests.*",
    "manage",
    "conftest",
    "scripts",
]
ignore_errors = true

[tool.ruff]
line-length = 100
